feat(frontend): shop UI and admin panel